Fix Spacing issue
- Added dot to clearfix, to make it the correct class name

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -25,7 +25,7 @@ body {
 .clearfix {
 	zoom: 1;
 }
-clearfix:after {
+.clearfix:after {
 	content: '.';
 	clear: both;
 	display: block;
